src/backend/cuda/snapshots/cuda_test__backend__cuda__test__load_gather_f32.snap
---
source: src/backend/cuda/test.rs
expression: jit.kernel_debug()
---
===============================================
Kernel 8967440830118899699:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[40]) {

	.reg.b8   %b <8>; .reg.b16 %w<8>; .reg.b32 %r<8>;
	.reg.b64  %rd<8>; .reg.f32 %f<8>; .reg.f64 %d<8>;
	.reg.pred %p <8>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, param_ty: None, reg: 5, param: Some(0), literal: 0, size: 0 } =>

	// [1]: ScheduleVar { op: Data, deps: [], ty: U32, param_ty: Input, reg: 6, param: Some(1), literal: 0, size: 3 } =>
	ld.param.u64 %rd0, [params+16];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.u32 %r6, [%rd0];

	// [2]: ScheduleVar { op: Literal, deps: [], ty: Bool, param_ty: None, reg: 7, param: None, literal: 1, size: 1 } =>
	mov.pred %p7, 0x1;


	// [3]: ScheduleVar { op: Gather, deps: [SVarId(0), SVarId(1), SVarId(2)], ty: F32, param_ty: Output, reg: 4, param: Some(2), literal: 0, size: 3 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r6, 4, %rd0;
	ld.global.nc.f32 %f4, [%rd3];

	// Store:
	ld.param.u64 %rd0, [params + 24]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f4; // (Index * ty.size() + params[offset])[Index] <- var

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

